Ansible+Jfrog/ansible/jfrog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jfrog-service
  namespace: artifactory
spec:
  selector:
    app: artifactory
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
